make the site smarter

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h3> maria dhaybi</h3>
-    <script src="/.index.js"></script>
+    <select id ="users"></select>
+    <script src="./index.js"></script>
+    <script> GetUsers()</script>
 </body>
 </html>
